Imported Java 1.4 portability fix from CVS hsqldb-dev
git-svn-id: https://svn.code.sf.net/p/hsqldb/svn/base/trunk@352 7c7dc5f5-a22d-0410-a3af-b41755a11667